# radiator-lang

./: .gitignore  README.md  compiler.py  main.lp  pyproject.toml  script.rad
docs/: about.md  index.html  style.css
mini/: ir.py  test_ir.py  test_loop.s
src/radiator/: __init__.py  analyser.py  compiler.py  expression.py  lexer.py  parser.py  token.py
tests/: test_analyser.py  test_compiler.py  test_expression.py  test_lexer.py  test_parser.py
