[project]
name = "radiator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-watcher>=0.4.3",
    "typer>=0.15.1",
]

[project.scripts]
radiator = "radiator.compiler:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
